--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "licenses": [{ "type": "BSD" }],
     "dependencies": {
-        "mapnik": "1.1.x",
+        "mapnik": "https://github.com/mapnik/node-mapnik/tarball/render-composite",
         "tilelive": "4.5.x"
     },
     "devDependencies": {
